# papercarator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOVER.md  NEXT_AI_PROMPT.md  QUICKFIX.md  README.md  SKILL.md  app.py  pyproject.toml
configs/: default.yaml  skill_codex.yaml
docs/: api.md  architecture.md  development.md  mcp_integration.md  roadmap.md  skill_integration.md
examples/: basic_usage.py  cli_demo.sh
papercarator/: __init__.py  cli.py  data_importer.py  literature_search.py  statistical_analysis.py
papercarator/core/: __init__.py  config.py  pipeline.py  resilient_pipeline.py  utils.py
papercarator/github_publisher/: __init__.py  publisher.py
papercarator/integrations/: __init__.py  vscode_bridge.py
papercarator/math_modeling/: __init__.py  __main__.py  matlab_bridge.py  model_builder.py  solver.py  validator.py
papercarator/math_modeling/models/: __init__.py  bayesian.py  fuzzy_logic.py  graph_theory.py
papercarator/paper_writer/: __init__.py  academic_enhancer.py  algorithm_writer.py  citation_formatter.py  latex_generator.py  llm_writer.py  paper_types.py  quality_scorer.py  section_writer.py  template_manager.py  templates.py  thesis_structure.py
papercarator/planner/: __init__.py  analyzer.py  param_extractor.py  task_planner.py
papercarator/visualization/: __init__.py  chart_generator.py  concept_diagrams.py  model3d_generator.py  sd_illustration.py  solidworks_bridge.py
references/: README.md  domain_backgrounds.md  model_profiles.md
scripts/: assemble_paper.py  batch_run.py  generate_data.py  quick_check.py  run_paper.py  sensitivity_analysis.py  validate_output.py
tests/: test_cli.py  test_config.py  test_math_modeling.py  test_paper_writer.py  test_pipeline.py  test_planner.py  test_skill_assets.py  test_visualization.py
